Template & Vue(Exo - 1.1)
Template & Vue(Exo - 1.1)

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,6 @@ homepage:
 client_prenom:
     path: /client/prenom/{prenom}
     controller: App\Controller\ClientController::info
+image_home:
+    path: /image/home
+    controller: App\Controller\ImageController::home
