--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -15,3 +15,34 @@ image_home:
 image_affiche:
     path: /data/Images/{reference}
     controller:  App\Controller\ImageController::affiche
+app_register:
+    path: /register
+    controller: App\Controller\RegistrationController::register
+    methods: ['GET', 'POST']
+
+login:
+    path: /login
+    controller: 'App\Controller\SecurityController::login'
+    methods: ['GET', 'POST']
+
+logout:
+    path: /logout
+    controller: 'App\Controller\SecurityController::logout'
+    methods: ['GET']
+
+register:
+    path: /register
+    controller: 'App\Controller\RegistrationController::register'
+    methods: ['GET', 'POST']
+
+connexion:
+    path: /connexion
+    controller: App\Controller\SecurityController::connexion
+
+security_page:
+    path: '/security'
+    controller: 'App\Controller\SecurityController::securityPage'
+    methods: ['GET']
+account_confirmation:
+    path: /confirmation
+    controller: App\Controller\RegistrationController::confirmation
